# Memorization

./: .gitignore  CMakeLists.txt  IO_Module.cpp  IO_Module.h  Mixer.cpp  Mixer.h  README.md  ReadMeRu.md  TestManager.cpp  TestManager.h  example.txt  exampleJSON.json  file.cpp  file.h  main.cpp  parser.h  parserJSON.cpp  parserJSON.h  parserTXT.cpp  parserTXT.h  reader.h  readerJSON.cpp  readerJSON.h  readerTXT.cpp  readerTXT.h  testCard.cpp  testCard.h  testfile.json  txtParser.cpp  txtParser.h  writer.cpp  writer.h  writerJSON.cpp  writerJSON.h  writerTXT.cpp  writerTXT.h
Headers/: IO_Module.h  TestManager.h  reader.h  readerJSON.h  readerTXT.h  writer.h  writerJSON.h
Sources/: IO_Module.cpp  Mixer.cpp  TestManager.cpp  file.cpp  main.cpp  readerJSON.cpp  readerTXT.cpp  testCard.cpp  writerJSON.cpp  writerTXT.cpp
rapidjson/: allocators.h  reader.h
